fixed darkmode scaling on mobile ios

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,6 @@ body,
   margin: 0;
   padding: 0;
   overscroll-behavior: contain;
-  position: sticky;
   overflow-x: clip;
   height: 100vh;
 }
@@ -23,10 +22,8 @@ body,
 .app {
   font-family: Arial, Helvetica, sans-serif;
   color: $dark-white;
-  min-height: 100%;
   display: flex;
   flex-direction: column;
-
   .app--light {
     @include appthemesizing;
     @include variables.light-background;
